--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/bootstrap.min.css">
+    <!-- For modals -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
     <!-- Polyfill(s) for older browsers -->
     <script src="node_modules/core-js/client/shim.min.js"></script>
@@ -20,6 +23,25 @@
   </head>
 
   <body>
-    <my-app>Loading AppComponent content here ...</my-app>
+     <div class="navbar navbar-fixed-top">
+        <div class="navbar-inner">
+          <div class="container">
+            <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+            <a class="brand" href="tapes">Movie list</a>
+            <a class="brand" href="#">Rented tapes</a>
+            <div class="nav-collapse collapse">
+            </div>
+          </div>
+        </div>
+      </div>
+
+
+
+
+    <my-app>Loading...</my-app>
   </body>
 </html>
